# mockylla

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: pypi_release.yml  unit_tests.yml
mockylla/: __init__.py  results.py  row.py
mockylla/classes/: state.py
mockylla/parser/: __init__.py  alter.py  batch.py  create.py  delete.py  drop.py  insert.py  materialized_view.py  select.py  truncate.py  type.py  update.py  utils.py
pyscylladb_mock/: __init__.py  _parser.py
pyscylladb_mock/parser/: __init__.py  batch.py  create.py  delete.py  insert.py  select.py  type.py  update.py  utils.py
tests/: test_alter_table.py  test_basic.py  test_batch.py  test_counter.py  test_cql_extensions.py  test_ddl.py  test_delete.py  test_demo.py  test_drop_table.py  test_execution_profile.py  test_existing_code.py  test_insert.py  test_keyspace.py  test_order_limit.py  test_select.py  test_select_in.py  test_session_features.py  test_table.py  test_truncate_table.py  test_types.py  test_udt.py  test_update.py  test_uuid.py
