[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyscylladb-mock"
version = "0.1.0"
description = "A mock for the ScyllaDB Python driver for testing purposes."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing :: Mocking",
]
dependencies = ["scylla-driver"]

[project.optional-dependencies]
dev = ["pytest>=8.4.1"]
